hero section done

--- a/index.html
+++ b/index.html
@@ -5,11 +5,33 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
   <title>Landing Page</title>
 </head>
 
 <body>
-  <p>test</p>
+  <div class="header-section">
+    <div class="header-logo">Header Logo</div>
+    <ul class="header-links">
+      <li>header link one</li>
+      <li>header link two</li>
+      <li>header link three</li>
+    </ul>
+  </div>
+  <div class="hero-section">
+    <div class="left-section">
+      <div class="hero-maintext">This website is <br> awesome</div>
+      <div class="hero-subtext">This website has some subtext that goes here under the <br> main title. Its a smaller
+        font and the color is lower <br> contrast</div>
+      <button class="hero-button">Sign Up</button>
+    </div>
+    <div class="right-section">
+      <div class="placeholder">This is a placeholder for an image</div>
+    </div>
+  </div>
 </body>
 
 </html>
