--- a/index.html
+++ b/index.html
@@ -32,6 +32,27 @@
       <div class="placeholder">This is a placeholder for an image</div>
     </div>
   </div>
+  <div class="information-section">
+    <div class="information-maintext">Some random information.</div>
+    <div class="information-box-text-wrapper">
+      <div class="one">
+        <div class="information-box"></div>
+        <div class="information-text">this is some subtext<br> under an illustration<br> or image</div>
+      </div>
+      <div class="two">
+        <div class="information-box"></div>
+        <div class="information-text">this is some subtext<br> under an illustration<br> or image</div>
+      </div>
+      <div class="three">
+        <div class="information-box"></div>
+        <div class="information-text">this is some subtext<br> under an illustration<br> or image</div>
+      </div>
+      <div class="four">
+        <div class="information-box"></div>
+        <div class="information-text">this is some subtext<br> under an illustration<br> or image</div>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
