--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
       </div>
     </div>
   </div>
+  <div class="quote-section">
+    <div class="quote-maintext">This is an inspiring quote, or a testimonial from a <br> customer. Maybe it's just
+      filling up space, or maybe <br> people will actually read it. Who knows? All I know <br> is that it looks nice.
+    </div>
+    <div class="quote-secondtext">-Thor, God of Thunder</div>
+  </div>
 </body>
 
 </html>
