landing page done

--- a/index.html
+++ b/index.html
@@ -59,6 +59,20 @@
     </div>
     <div class="quote-secondtext">-Thor, God of Thunder</div>
   </div>
+  <div class="call-to-action-section">
+    <div class="call-to-action-container">
+      <div class="left-action">
+        <div class="action-maintext">Call to action! It's time!</div>
+        <div class="action-subtext">Sign up for our product by clicking that button right over there!</div>
+      </div>
+      <div class="right-action">
+        <button class="signup-action-button">Sign Up</button>
+      </div>
+    </div>
+  </div>
+  <div class="footer-section">
+    <div class="footer-text">Copyright the Odin Project 2021</div>
+  </div>
 </body>
 
 </html>
